--- a/style.css
+++ b/style.css
@@ -5792,7 +5792,7 @@ aside#secondary .widget .widget-title:after,
 .footer-widget .widget_calendar td,
 .footer-widget .widget_calendar th,
 .footer-widget .widget_calendar caption {
-  color: #000;
+  color: #fff;
 }
 
 .widget_calendar tbody a {
@@ -8868,7 +8868,7 @@ section.error-404.not-found h1:before {
 /* ==================================*/
 
 .wrap-footer {
-  background-color: #fbfbfb;
+  background-color: rgba(24, 24, 24, 0.96);
   padding: 0;
 }
 
@@ -8902,7 +8902,7 @@ section.error-404.not-found h1:before {
 }
 
 .footer-widget {
-  color: #000;
+  color: #fff;
   padding-bottom: 2px;
   padding-top: 20px;
   line-height: 1.5;
@@ -8928,7 +8928,7 @@ section.error-404.not-found h1:before {
 
 .footer-widget .widgettitle,
 .footer-widget .widget-title {
-  color: #000;
+  color: #fff;
   text-align: left;
   text-transform: uppercase;
   font-size: 16px;
@@ -8939,7 +8939,9 @@ section.error-404.not-found h1:before {
   padding: 0 0 10px 0;
   position: relative;
 }
-
+.footer-widget p{
+  color: #fff;
+}
 h1.widget-title:after {
   content: "";
   position: absolute;
@@ -8956,7 +8958,7 @@ h1.widget-title:after {
 }
 
 .footer-widget a {
-  color: #000;
+  color: #fff;
 }
 
 .site-footer {
