--- a/style.css
+++ b/style.css
@@ -5697,7 +5697,7 @@ aside#secondary .widget .widget-title:after,
 
 .footer-widget .widget li {
   border-top-style: dotted;
-  border-top: 1px solid #d2d2d2;
+  border-top: 1px solid #2b2b2b;
 }
 .footer-widget .widget li:first-child{
   border-top: 0;
@@ -10376,6 +10376,10 @@ section.testimonials-section .slick-dots li {
   right: 0;
   border-radius: 50%;
   margin: 15px auto;
+}
+.th-front.th-face img{
+  height: 130px;
+  width: 130px;
 }
 
 section.testimonials-section #f1_container,
