--- a/style.css
+++ b/style.css
@@ -8865,7 +8865,7 @@ section.error-404.not-found h1:before {
 /* ==================================*/
 
 .wrap-footer {
-  background-color: rgba(24, 24, 24, 0.96);
+  background-color: #000;
   padding: 0;
 }
 
@@ -9618,8 +9618,8 @@ span.edit-link:before {
 /* trade-hub css */
 
 div#page {
-  background: #fff;
-  padding: 0;
+/*  background: #fff;
+*/  padding: 0;
 }
 
 article.sticky .wrapper-grid {
