chnage in service section and esc_url permalink

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version: 1.0.4
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: trade-hub
-Tags: custom-logo, custom-menu, custom-colors, threaded-comments, blog, news, one-column, two-columns, left-sidebar, right-sidebar,custom-background,  translation-ready, featured-images, theme-options, full-width-template, e-commerce, footer-widgets
+Tags: custom-logo, custom-menu, custom-colors,custom-header, threaded-comments, blog, news, one-column, two-columns, left-sidebar, right-sidebar,custom-background,  translation-ready, featured-images, theme-options, full-width-template, e-commerce, footer-widgets
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
